[gd_scene load_steps=9 format=3 uid="uid://c3rskkb6smpo"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_ws0gl"]
[ext_resource type="Shader" path="res://shaders/vhs.gdshader" id="2_bdwdm"]
[ext_resource type="Texture2D" uid="uid://ckujhbyfrn8k7" path="res://ui/keyboard_icons/T_W_Key_White.png" id="3_2p2l2"]
[ext_resource type="AudioStream" uid="uid://c6jnxw1xa35u8" path="res://sounds/background_music.mp3" id="3_2wu6h"]
[ext_resource type="Texture2D" uid="uid://snyvxx8ttmep" path="res://ui/keyboard_icons/T_S_Key_White.png" id="4_o10cj"]
[ext_resource type="Texture2D" uid="uid://dsvxl5q3v1r76" path="res://ui/keyboard_icons/T_Up_Key_White.png" id="5_sylhr"]
[ext_resource type="Texture2D" uid="uid://gojst1a1fnej" path="res://ui/keyboard_icons/T_Down_Key_White.png" id="6_cprbf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t1u6n"]
shader = ExtResource("2_bdwdm")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 2.5
shader_parameter/roll_size = 20.0
shader_parameter/roll_variation = 3.342
shader_parameter/distort_intensity = 0.001
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.5
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ws0gl")

[node name="RetroEffect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_t1u6n")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="InputHelp" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="WKey" type="TextureRect" parent="InputHelp"]
layout_mode = 0
offset_left = 73.0
offset_top = 401.0
offset_right = 105.0
offset_bottom = 433.0
texture = ExtResource("3_2p2l2")
expand_mode = 1

[node name="SKey" type="TextureRect" parent="InputHelp"]
layout_mode = 0
offset_left = 73.0
offset_top = 434.0
offset_right = 105.0
offset_bottom = 466.0
texture = ExtResource("4_o10cj")
expand_mode = 1

[node name="UpKey" type="TextureRect" parent="InputHelp"]
layout_mode = 0
offset_left = 538.0
offset_top = 401.0
offset_right = 570.0
offset_bottom = 433.0
texture = ExtResource("5_sylhr")
expand_mode = 1

[node name="DownKey" type="TextureRect" parent="InputHelp"]
layout_mode = 0
offset_left = 538.0
offset_top = 434.0
offset_right = 570.0
offset_bottom = 466.0
texture = ExtResource("6_cprbf")
expand_mode = 1

[node name="PlayerOneControls" type="Label" parent="InputHelp"]
layout_mode = 0
offset_left = 37.0
offset_top = 371.0
offset_right = 181.0
offset_bottom = 398.0
theme_override_font_sizes/font_size = 14
text = "Player 1"

[node name="PlayerTwoControls" type="Label" parent="InputHelp"]
layout_mode = 0
offset_left = 505.0
offset_top = 371.0
offset_right = 649.0
offset_bottom = 398.0
theme_override_font_sizes/font_size = 14
text = "Player 2"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Title" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "PONG"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="EnableRetroButton" type="CheckButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "RETRO EFFECT"
alignment = 1

[node name="OnePlayerButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MarginContainer/QuitButton")
text = "1 Player"

[node name="TwoPlayersButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2 Players"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../../OnePlayerButton")
text = "Exit"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2wu6h")
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/EnableRetroButton" to="." method="_on_enable_retro_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/OnePlayerButton" to="." method="_on_one_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TwoPlayersButton" to="." method="_on_two_players_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MarginContainer/QuitButton" to="." method="_on_quit_button_pressed"]
